# Chat-Template-for-Flask-updated-

./: LICENSE  README.md  main.py  pyproject.toml
app/main/: forms.py  routes.py
app/templates/: chat.html
